--- a/cookie-recipe.html
+++ b/cookie-recipe.html
@@ -2,16 +2,16 @@
 
 <html>
   <head>
-<meta charset="utf-8">
-<title>Best Chocolate Chip Cookies.</title>
+    <title>Best Chocolate Chip Cookies.</title>
   </head>
   <body>
     <h1>Best Chocolate Chip Cookies</h1>
     <img src="http://lorempixel.com/400/200/" alt="An image of a cookie"/>
 <p>This recipe is from my dad and they are a favorite among friends and family.</p>
 <p>The secret ingredient is the coconut!<em>Be warned</em>,these will fly off of the plate!</p>
-<!-- Add in section about history of cookies? <h3> History of cookies </h3> <p>Most people don't know the complicated past of the cookie. FINISH -->
-    <h2>Ingredients</h2>
+<h2> History of cookies </h2>
+ <p>Most people don't know the complicated past of the cookie. They actually began in Sydney, Australia in the late 18th century.</p>
+    <h3>Ingredients</h3>
 
     <ul>
       <li>Butter</li>
@@ -27,7 +27,7 @@
       <li>Coconut</li>
     </ul>
 
-   <h2>Directions</h2>
+   <h3>Directions</h3>
 
        <ol>
         <li>Preheat the oven to 325.</li>
