fixed spacing and tag placement error

--- a/cookie-recipe.html
+++ b/cookie-recipe.html
@@ -26,9 +26,7 @@
       <li>Oatmeal</li>
       <li>Coconut</li>
     </ul>
-
    <h3>Directions</h3>
-
        <ol>
         <li>Preheat the oven to 325.</li>
         <li>Beat the butter, sugar, eggs and vanilla together until creamy.</li>
@@ -37,7 +35,6 @@
         <li>Stir in chocolate chips, oatmeal and coconut.</li>
         <li>Bake for <strong>10 minutes</strong> or until golden brown.</li>
        </ol>
-
-<p><a href="http://allrecipes.com">Click here</a> to check out my other great recipes.</p>
+       <a href="http://allrecipes.com">Click here to check out my other great recipes</a>
   </body>
 </html>
